ExamTask1separate/css/style.css
html *
{
   font-family: Arial !important;
}

head {

	background-color: aquamarine;
}


header {

	height: 80px;
	width: 100%;
	max-width:1000px;
	margin-left: auto;
	margin-right: auto;
	background-color: aquamarine;
	text-align: left;
	margin-bottom:-10px;
	margin-top:-20px;
}


nav {
	background-color: beige;
	float: top;
	font-size:0px;
	margin-bottom:-10px;
}



a:link {
	width:100px;
    color: orange;
    background-color: transparent;
    text-decoration: none;
}

a:hover {
    color: red;
    background-color: antiquewhite;
    text-decoration: none;
}

a:active{
	 color: green;
	
}

h1 {
	margin-bottom: -0.67em;
}

h2 {
	padding: 5px;
}

h3 {
	padding: 5px;
	font-size:1.25em;
}

h4 {
	padding: 5px;
}


h6 {
	padding: 5px;
}

figure {
	padding: 2px;
	max-width : 95%;
	
}

figcaption {
	word-wrap: break-all;
	/* word-wrap: break-word; */
}





body {
	max-width:1000px;
	width: 96%;
	margin-left: auto;
	margin-right: auto;
	padding: 5px;
	background-color: beige;
	border: 1px solid #ccc;

}


table {

  table-layout: fixed; 
  border-spacing: 0px;
  *margin-left: -100px;/*ie7*/
}

tr {
  height:40px;
  max-height:40px;
}

td,  th {
  text-align: left;
  vertical-align: top;
  /* border-top: 1px solid #ccc; */
  /* border-left: 1px solid #ccc; */
  /* border-right: 1px solid #ccc; */
  border: 1px solid #ccc;
  padding:10px;
  width:150px;
  
  height:40px;
  max-height:40px;
}


button {

	margin-top:-10px;
	margin-bottom:10px;
}

.fi {
	margin-top:30px;
	margin-bottom:-20px;
}

.menu {

	padding-left:48px;
	padding-right:48px;
	border: 2px solid#6495ED; /* CornflowerBlue */
	display:inline-flex;
    width:250px;
	height:60px;
	font-size:24px;
	color: orange;
    background-color: transparent;

}

.sideBarMenu {

	padding-left:48px;
	padding-right:48px;
	border: 2px solid#6495ED; /* CornflowerBlue */
	display:inline-flex;
    min-width:100%;
	height:10%;
	min-height:50px;
	font-size:24px;


}

.left {
	padding: 5px;
	display:block
}

.right {
	margin-top:15px;
	padding-left: 5px;
	display:inline-block; 
	
}

.responsive {

	padding: 5px;
	max-width: 1000px;
} 

.trivia {
	padding: 5px;
	max-width: 1000px;
	
}

.triv {
	color:cornflowerblue;
	
}



.content {
	display: none;
}

.mapInit {

	max-width:800px;

	max-height:600px;

}

.map {
	display: none;

	max-width:800px;

	max-height:600px;

}

.fix {
  vertical-align: top;
  text-align: left;
  position: absolute;
  *position: relative; /*ie7*/
  margin-left: -150px;
  width:130px;
  /* border-style:hidden; */
  border: 1px solid #ccc;
  /* border-right: 1px solid #ccc;	 */
  /* border-top: 1px solid #ccc; */
  /* border-left: 1px solid #ccc;	 */
  padding:-10px;
  

}
.outer {/*position:rabsolute*/}
.inner {
  overflow-x:auto;
  overflow-y:visible;

  margin-left:150px;
}

.sidenav {
	height: 100%; /* 100% Full-height */
	width: 0; /* 0 width - change this with JavaScript */
	position: fixed; /* Stay in place */
	z-index: 1; /* Stay on top */
	top: 0;
	right: 0;
	background-color: #FFF; /* Black*/
	overflow-x: hidden; /* Disable horizontal scroll */
	/*padding-top: 60px;*/ /* Place content 60px from the top */
	transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
}

/* The navigation menu links */
.sidenav a {
	padding: 8px 8px 8px 32px;
	text-decoration: none;
	font-size: 25px;
	color: #818181;
	display: block;
	/*transition: 0.3s*/
}

/* When you mouse over the navigation links, change their color */


/* Position and style the close button (top right corner) */
/* .sidenav .closebtn { */
	/* position: absolute; */
	/* top: 0; */
	/* right: 25px; */
	/* font-size: 36px; */
	/* margin-left: 50px; */
/* } */

/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
#main {
	transition: margin-left .5s;
	padding: 20px;
}

.cover {
		width: 600px;
		max-width:100%;
		display: block;
		margin: auto;
	}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
	.sidenav {padding-top: 15px;}
	.sidenav a {font-size: 18px;}
}


@media screen and (max-width: 1199px) {
	 
	#desktopMenu {
		display:none;
	}
	#mobileMenu {
		display:inline;
	}
	
	.img {
		float:top;

		max-width: 100%
	}
	
	.bLink {
		text-align:left;
	}
	
	
}
@media screen and (min-width: 1200px) {
	#desktopMenu {
		display:inline;
	}
	#mobileMenu {
		display:none;
	}
	
	.img {
		float:right;
		width : 500px;
		max-width: 100%;
	}
	
	.bLink {
		text-align:right;
	}
	
}

